<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.Group2.Heartbeat.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_nav_home_self"
            app:destination="@id/nav_home" />
        <action
            android:id="@+id/action_nav_home_to_nav_test"
            app:destination="@id/nav_test" />
    </fragment>

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.Group2.Heartbeat.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
    android:id="@+id/nav_test"
    android:name="com.Group2.Heartbeat.ui.SleepHist.SleepHistFragment"
    android:label="@string/menu_sleephist"
    tools:layout="@layout/fragment_sleephist" />

</navigation>